--- a/.github/workflows/docker-build_mani.yml
+++ b/.github/workflows/docker-build_mani.yml
@@ -15,6 +15,11 @@ jobs:
       with:
         python-version: "3.10"
 
+    steps:
+    - uses: actions/setup-node@v3
+    - with:
+        node-version: '20'
+
     - name: Install evalAI
       run: |
         sudo apt-get install libxml2-dev libxslt-dev 
