--- a/.github/workflows/docker-build_mani.yml
+++ b/.github/workflows/docker-build_mani.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - uses: actions/setup-node@v3
-    - with:
+      with:
         node-version: '20'
 
     - name: Install evalAI
