--- a/.github/workflows/docker-build_mani.yml
+++ b/.github/workflows/docker-build_mani.yml
@@ -14,11 +14,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-
-    steps:
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '20'
+    
+    runs:
+      using: 'node20'
+      main: 'main.js'
 
     - name: Install evalAI
       run: |
